# crypto-analytics-platform

./: .dockerignore  .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
infrastructure/: Dockerfile  Dockerfile.mlflow  docker-compose.yml
infrastructure/init/: 01_metadata.sql  02_crypto.sql  03_seed.sql  edit.sql  script.sql
notebook/: forcast_bechmark.ipynb  forcast_eval.ipynb  forcast_explore.ipynb  forcast_predict.ipynb  prophet.ipynb  sarimax.ipynb
src/: main.py
src/core/: config.py  database.py  exceptions.py  logging_config.py
src/data/: crud.py  ingestion.py  seed_tokens.py  validation.py
src/data/ingestion/: chain_client.py  market_client.py  news_client.py
src/data/storage/: crud.py
src/mcp_servers/: price_server.py
src/modules/forecasting/: export_panel.py  export_panel_csv.py  retrain.py
src/modules/forecasting/data/: preprocess_coin.py  preprocess_panel.py  preprocess_utils.py  scaler_utils.py
src/modules/forecasting/evaluation/: benchmark.py  metrics.py
src/modules/forecasting/explainers/: xai.py
src/modules/forecasting/models/: cnn_lstm.py  prophet.py  sarimax.py  tft.py
src/modules/forecasting/models/scalers/: panel_global_scaler.json  panel_global_scaler.pkl  scaler_AAVE.json  scaler_AAVE.pkl  scaler_ADA.json  scaler_ADA.pkl  scaler_APT.json  scaler_APT.pkl  scaler_AVAX.json  scaler_AVAX.pkl  scaler_BCH.json  scaler_BCH.pkl  scaler_BNB.json  scaler_BNB.pkl  scaler_BTC.json  (+45 more)
src/modules/forecasting/registry/: mlflow_utils.py
src/utils/: cache.py
tests/: test_app.py  test_forcast.py
(+42 files in other folders)
