[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analytics-platform"
version = "0.1.0"
description = "MCP-integrated monolithic crypto analytics platform"
authors = [
    { name = "Muhammed Sarfras P C", email = "sarfrasspc@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
